28 February 2005 Laurent Rineau
- Remove one call to redraw() in Qt_widget_layer_get_polygon.h,
because slots connected to new_cgal_object() should cann it themself.

18 December 2004 Sylvain Pion
- Use $(CGAL_INCL_DIR) instead of ../../include.

18 December 2004 Sylvain Pion
- Rename src/CGALQt/makefile_Qt to makefile.

==================================== CGAL 3.1 =================================

2 December 2004 Sylvain Pion
- doc : remove () in "noFill()" argument.

4 September 2004 Menelaos Karavelas
- g++ 3.4 fixes

24 August 2004 Andreas Fabri
- changes in doc_tex for pdflatex

17 May 2004 Menelaos Karavelas
- replaced Point by Point_2 in the demo in order to resolve clash with
  the Mac version of Qt

6 May 2004 Menelaos Karavelas
- added call to ranlib in makefile_Qt; needed for Darwin

25 March 2004 Radu Ursu
- made doc work with the new implementation of the Manual tools

23 March 2004 Radu Ursu
- fixed Qt_widget.C x_pixel and y_pixel!!!
- added more functionality to Qt_widget_get_polygon.h: shift key makes the line go vertical or horizontal 


22 March 2004 Radu Ursu
- removed obsolete functions of Qt3 from Qt_widget
  - removed QMainWindow::addToolBar
  - removed QWidget::setBackgroundColor
- Qt_widget still has the interface as setBackgroundColor but makes a call to QWidget::setPaletteBackgroundColor(QColor &)

8 March 2004 Sylvain Pion
- IO/Qt_widget_Conic_2.h : make more robust against the case where RT is an
  integral type.

1.3.63 - 20/01/2004 [rursu]
----------------------------------------
	I have added two new layers:
	  Navigation_layer.h, Custom_zoom_layer.h
	I have updated the doc too.

1.3.62 - 21/11/2003
----------------------------------------
	We don't have time for ROTATIONS support, so we roll back the 
	Rotations stuff.
	It remains in v1_3_61 though.

1.3.61 - 19/11/2003
----------------------------------------
	I want the latest changes in the testsuite
    This version of Qt_widget knows how to use rotations.